# smoothly

./: .travis.yml  Cargo.toml  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: error.rs  lib.rs  macros.rs  main.rs  repo.rs  yeet.rs
src/commands/: add.rs  interact.rs  mod.rs  new.rs  push.rs  selfupdate.rs
